# openai-demo

./: .gitignore  README.md  main.py  pyproject.toml
helpers/: prompt.py
